--- a/EOY/eoy-calendar-1-nudge.html
+++ b/EOY/eoy-calendar-1-nudge.html
@@ -396,14 +396,12 @@
 
                                                                                                         <ul>
                                                                                                             <li><span
-                                                                                                                    style="color: #33434e; font-size: 18px;">Active Programs: Programs that you still need to complete.</span>
+                                                                                                                    style="color: #33434e; font-size: 18px;">Active Programs: Programs you still need to complete.</span>
                                                                                                             </li>
                                                                                                             <li><span
                                                                                                                 style="color: #33434e; font-size: 18px;">Add Programs: Additional programs available to you.</span>
                                                                                                         </li>
-                                                                                                        <li><span
-                                                                                                            style="color: #33434e; font-size: 18px;">Green checkmarks: Confirm completion of actions. Are you missing any?</span>
-                                                                                                    </li>
+                                                                                                       
                                                                                                     <li><span
                                                                                                         style="color: #33434e; font-size: 18px;">Rewards: Overview of rewardable programs.</span>
                                                                                                 </li>
