--- a/EOY/eoy-program-1-nudge.html
+++ b/EOY/eoy-program-1-nudge.html
@@ -318,19 +318,12 @@
                                                                                                                 style="color: #33434e; font-size: 18px; line-height: 27px;">Time is running out to <strong>earn your rewards</strong>.</span></p>
 
                                                                                                         <p style="font-size: 18px; line-height: 27px;"><span
-                                                                                                                    style="color: #33434e; font-size: 18px; line-height: 27px;">[[NameFirst]], log in to CaféWell today to ensure you've completed your programs.</span></p>
+                                                                                                                    style="color: #33434e; font-size: 18px; line-height: 27px;">[[NameFirst]], log in to [[CampaignProperty83]] today to ensure you've completed your programs.</span></p>
 
                                                                                                                     <p style="font-size: 18px; line-height: 27px;"><span
-                                                                                                                        style="color: #33434e; font-size: 18px; line-height: 27px;">Time period to:</span></p>
+                                                                                                                        style="color: #33434e; font-size: 18px; line-height: 27px;">The last day to earn rewards is [[CampaignProperty101]], but you'll have through [[CampaignProperty102]] to redeem your rewards!</span></p>
 
-                                                                                                                        <ul>
-                                                                                                                            <li><span
-                                                                                                                                    style="color: #33434e; font-size: 18px;">Earn rewards ends - [[CampaignProperty101]]</span>
-                                                                                                                            </li>
-                                                                                                                            <li><span
-                                                                                                                                style="color: #33434e; font-size: 18px;">Redeem rewards ends - [[CampaignProperty102]]</span>
-                                                                                                                        </li>
-                                                                                                                        </ul>
+                                                                                                                     
  
  
                                                           </div>
@@ -406,14 +399,12 @@
 
                                                                                                         <ul>
                                                                                                             <li><span
-                                                                                                                    style="color: #33434e; font-size: 18px;">Active Programs: Programs that you still need to complete.</span>
+                                                                                                                    style="color: #33434e; font-size: 18px;">Active Programs: Programs you still need to complete.</span>
                                                                                                             </li>
                                                                                                             <li><span
                                                                                                                 style="color: #33434e; font-size: 18px;">Add Programs: Additional programs available to you.</span>
                                                                                                         </li>
-                                                                                                        <li><span
-                                                                                                            style="color: #33434e; font-size: 18px;">Green checkmarks: Confirm completion of actions. Are you missing any?</span>
-                                                                                                    </li>
+                                                                                                     
                                                                                                     <li><span
                                                                                                         style="color: #33434e; font-size: 18px;">Rewards: Overview of rewardable programs.</span>
                                                                                                 </li>
