--- a/EOY/eoy-program-3-second-drip.html
+++ b/EOY/eoy-program-3-second-drip.html
@@ -365,9 +365,9 @@
                                                                                                         style="padding-bottom: 0; font-size:18px; line-height: 27px;">
                                                                                                         <span
                                                                                                             style="color: #33434e; font-size: 18px; line-height:27px;">
-                                                                                                            &check; Log in today.<br />
-                                                                                                            &check; Finish your open programs.<br />
-                                                                                                            &check; Get the credit you deserve for taking care of you!</span></p>
+                                                                                                            &nbsp;&nbsp;&nbsp;&check; Log in today.<br />
+                                                                                                            &nbsp;&nbsp;&nbsp;&check; Finish your open programs.<br />
+                                                                                                            &nbsp;&nbsp;&nbsp;&check; Get the credit you deserve for taking care of you!</span></p>
 
                                                                                                         <p
                                                                                                         style="padding-bottom: 0; font-size:18px; line-height: 27px;">
