--- a/Med Adherance/Med Adherance Update 1-1-1.html
+++ b/Med Adherance/Med Adherance Update 1-1-1.html
@@ -726,7 +726,7 @@
                                                                                                                                     Preferences</a>
                                                                                                                             </p>
                                                                                                                             <p
-                                                                                                                                style="font-size: 13px; line-height: 21px; mso-line-height-alt: 21px; margin: 0;"> &copy;2020 Welltok, Inc., All rights reserved.<br> 1515 Arapahoe St, Tower 3, Suite 700, Denver, CO 80202
+                                                                                                                                style="font-size: 13px; line-height: 21px; mso-line-height-alt: 21px; margin: 0;"> &copy;2020 Welltok, Inc., All rights reserved.<br> [[CampaignProperty86]] 
                                                                                                                             </p>
                                                                                                                         </div>
                                                                                                                     </div>
