End of Year, Med Adherance

--- a/Med Adherance - P3/MTM Program - General.html
+++ b/Med Adherance - P3/MTM Program - General.html
@@ -323,7 +323,7 @@
                                                                                                             </span></p>
 
                                                                                                             <p style="font-size: 18px; line-height: 27px;"><span
-                                                                                                                style="color: #33434e; font-size: 18px; line-height: 27px;">Sit down with a pharmacist and go over each of your prescriptions to make sure you are taking the right ones at the right time, and ensure you're paying the best price.</span></p> 
+                                                                                                                style="color: #33434e; font-size: 18px; line-height: 27px;">Sit down with a pharmacist to make sure you are taking the right ones at the right time, and ensure you're paying the best price.</span></p> 
 
                                                                                                                 <p style="font-size: 18px; line-height: 27px;"><span
                                                                                                                     style="color: #33434e; font-size: 18px; line-height: 27px;">Schedule an appointment today with our pharmacy team by calling [[CampaignProperty103]]</span>.</p> 
